--- a/BikeshareRidePlanner/BikeshareRidePlanner/Info.plist
+++ b/BikeshareRidePlanner/BikeshareRidePlanner/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>Bike Ride</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -20,6 +22,17 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Bikeshare Ride Planner</string>
+	<key>NSLocationUsageDescription</key>
+	<string>Bikeshare Ride Planner</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Bikeshare Ride Planner</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
